Fixed overflowing layout issues for screens with very small height

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -273,7 +273,7 @@ ul {
     }
 
     .main-section {
-        height: 50vh;
+        /* height: 50vh; */
         padding-top: 20px;
     }
 
